src/CEGUI.Native/include/CEGUI/CEGUIC.h

typedef struct CEGUI_C_System_t* CEGUI_C_System;
typedef struct CEGUI_C_GUIContext_t* CEGUI_C_GUIContext;
typedef struct CEGUI_C_Window_t* CEGUI_C_Window;
typedef int32_t CEGUI_C_Bool;
typedef enum CEGUI_C_Result
{
    CEGUI_C_RESULT_SUCCESS = 0,
    CEGUI_C_RESULT_INVALID_ARGUMENT = 1,
    CEGUI_C_RESULT_NOT_INITIALISED = 2,
    CEGUI_C_RESULT_CEGUI_EXCEPTION = 3,
    CEGUI_C_RESULT_STD_EXCEPTION = 4,
    CEGUI_C_RESULT_UNKNOWN_EXCEPTION = 5,
    CEGUI_C_RESULT_NOT_SUPPORTED = 6
} CEGUI_C_Result;
typedef enum CEGUI_C_MouseButton
{
    CEGUI_C_MOUSE_LEFT = 0,
    CEGUI_C_MOUSE_RIGHT = 1,
    CEGUI_C_MOUSE_MIDDLE = 2,
    CEGUI_C_MOUSE_X1 = 3,
    CEGUI_C_MOUSE_X2 = 4,
    CEGUI_C_MOUSE_COUNT = 5,
    CEGUI_C_MOUSE_NONE = 6
} CEGUI_C_MouseButton;
/* Error and version information. Returned strings remain valid until the next
   C binding call on the same thread. */
CEGUI_C_API const char* CEGUI_C_CALL CEGUI_C_GetLastError(void);
CEGUI_C_API uint32_t CEGUI_C_CALL CEGUI_C_GetVersionMajor(void);
CEGUI_C_API uint32_t CEGUI_C_CALL CEGUI_C_GetVersionMinor(void);
CEGUI_C_API uint32_t CEGUI_C_CALL CEGUI_C_GetVersionPatch(void);
CEGUI_C_API const char* CEGUI_C_CALL CEGUI_C_GetVersionString(void);
CEGUI_C_API CEGUI_C_Bool CEGUI_C_CALL CEGUI_C_IsUnicodeStringBuild(void);
/* System lifecycle. D3D11 pointers are ID3D11Device* and
   ID3D11DeviceContext*. CEGUI retains its original ownership semantics. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_D3D11_BootstrapSystem(
    void* device,
    void* device_context,
    CEGUI_C_System* out_system);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_D3D11_DestroySystem(void);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_System_GetExisting(
    CEGUI_C_System* out_system);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_System_GetDefaultGUIContext(
    CEGUI_C_System system,
    CEGUI_C_GUIContext* out_context);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_System_RenderAllGUIContexts(
    CEGUI_C_System system);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_System_InjectTimePulse(
    CEGUI_C_System system,
    float elapsed_seconds,
    CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_System_NotifyDisplaySizeChanged(
    CEGUI_C_System system,
    float width,
    float height);
/* DefaultResourceProvider. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ResourceProvider_SetGroupDirectory(
    CEGUI_C_System system,
    const char* resource_group_utf8,
    const char* directory_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ResourceProvider_GetGroupDirectory(
    CEGUI_C_System system,
    const char* resource_group_utf8,
    const char** out_directory_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_ResourceProvider_ClearGroupDirectory(
    CEGUI_C_System system,
    const char* resource_group_utf8);
/* Resource loading. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Scheme_LoadFromFile(
    const char* filename_utf8,
    const char* resource_group_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Scheme_IsDefined(
    const char* name_utf8,
    CEGUI_C_Bool* out_defined);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Font_LoadFromFile(
    const char* filename_utf8,
    const char* resource_group_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Font_IsDefined(
    const char* name_utf8,
    CEGUI_C_Bool* out_defined);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Image_AddFromFile(
    const char* name_utf8,
    const char* filename_utf8,
    const char* resource_group_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_SetDefaultResourceGroups(
    const char* schemes_utf8,
    const char* imagesets_utf8,
    const char* fonts_utf8,
    const char* layouts_utf8,
    const char* looknfeels_utf8);
/* WindowManager. Window handles are borrowed and are invalid after the native
   WindowManager destroys the corresponding window. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_CreateWindow(
    const char* type_utf8,
    const char* name_utf8,
    CEGUI_C_Window* out_window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_LoadLayoutFromFile(
    const char* filename_utf8,
    const char* resource_group_utf8,
    CEGUI_C_Window* out_root_window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_GetWindow(
    const char* name_utf8,
    CEGUI_C_Window* out_window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_IsWindowPresent(
    const char* name_utf8,
    CEGUI_C_Bool* out_present);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_IsAlive(
    CEGUI_C_Window window,
    CEGUI_C_Bool* out_alive);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_DestroyWindow(
    CEGUI_C_Window window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_DestroyAllWindows(void);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_WindowManager_CleanDeadPool(void);
/* GUIContext and input injection. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_GetRootWindow(
    CEGUI_C_GUIContext context,
    CEGUI_C_Window* out_window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_SetRootWindow(
    CEGUI_C_GUIContext context,
    CEGUI_C_Window window);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_Draw(
    CEGUI_C_GUIContext context);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_SetDefaultFont(
    CEGUI_C_GUIContext context,
    const char* font_name_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectMousePosition(
    CEGUI_C_GUIContext context, float x, float y, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectMouseMove(
    CEGUI_C_GUIContext context, float delta_x, float delta_y, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectMouseWheelChange(
    CEGUI_C_GUIContext context, float delta, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectMouseButtonDown(
    CEGUI_C_GUIContext context, CEGUI_C_MouseButton button, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectMouseButtonUp(
    CEGUI_C_GUIContext context, CEGUI_C_MouseButton button, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectKeyDown(
    CEGUI_C_GUIContext context, uint32_t scan_code, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectKeyUp(
    CEGUI_C_GUIContext context, uint32_t scan_code, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectChar(
    CEGUI_C_GUIContext context, uint32_t codepoint, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectTimePulse(
    CEGUI_C_GUIContext context, float elapsed_seconds, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectCopyRequest(
    CEGUI_C_GUIContext context, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectCutRequest(
    CEGUI_C_GUIContext context, CEGUI_C_Bool* out_handled);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_GUIContext_InjectPasteRequest(
    CEGUI_C_GUIContext context, CEGUI_C_Bool* out_handled);
/* Generic Window operations. */
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetName(
    CEGUI_C_Window window, const char** out_name_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetType(
    CEGUI_C_Window window, const char** out_type_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetText(
    CEGUI_C_Window window, const char** out_text_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetText(
    CEGUI_C_Window window, const char* text_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_SetProperty(
    CEGUI_C_Window window, const char* property_utf8, const char* value_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetProperty(
    CEGUI_C_Window window, const char* property_utf8, const char** out_value_utf8);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_IsPropertyPresent(
    CEGUI_C_Window window, const char* property_utf8, CEGUI_C_Bool* out_present);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_AddChild(
    CEGUI_C_Window parent, CEGUI_C_Window child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_RemoveChild(
    CEGUI_C_Window parent, CEGUI_C_Window child);
CEGUI_C_API CEGUI_C_Result CEGUI_C_CALL CEGUI_C_Window_GetParent(
    CEGUI_C_Window window, CEGUI_C_Window* out_parent);