managed/CEGUI.Managed/NativeMethods.cs

using System;
using System.Runtime.InteropServices;

namespace CEGUI;

internal static class NativeMethods
{
    internal const string LibraryName = "CEGUI.Native";

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    internal delegate int EventCallback(ref NativeEventData eventData, IntPtr userData);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr CEGUI_C_GetLastError();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint CEGUI_C_GetVersionMajor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint CEGUI_C_GetVersionMinor();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint CEGUI_C_GetVersionPatch();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr CEGUI_C_GetVersionString();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int CEGUI_C_IsUnicodeStringBuild();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_D3D11_BootstrapSystem(IntPtr device, IntPtr deviceContext, out IntPtr system);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_D3D11_DestroySystem();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_System_GetExisting(out IntPtr system);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_System_GetDefaultGUIContext(IntPtr system, out IntPtr context);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_System_RenderAllGUIContexts(IntPtr system);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_System_InjectTimePulse(IntPtr system, float elapsedSeconds, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_System_NotifyDisplaySizeChanged(IntPtr system, float width, float height);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ResourceProvider_SetGroupDirectory(
        IntPtr system,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string resourceGroup,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string directory);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ResourceProvider_GetGroupDirectory(
        IntPtr system,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string resourceGroup,
        out IntPtr directory);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_ResourceProvider_ClearGroupDirectory(
        IntPtr system,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string resourceGroup);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Scheme_LoadFromFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? resourceGroup);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Scheme_IsDefined(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int defined);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Font_LoadFromFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? resourceGroup);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Font_IsDefined(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int defined);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Image_AddFromFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? resourceGroup);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_SetDefaultResourceGroups(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? schemes,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? imagesets,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? fonts,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? layouts,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? lookNFeels);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_CreateWindow(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string type,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? name,
        out IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_LoadLayoutFromFile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string filename,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string? resourceGroup,
        out IntPtr rootWindow);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_GetWindow(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_IsWindowPresent(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name,
        out int present);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_IsAlive(IntPtr window, out int alive);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_DestroyWindow(IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_DestroyAllWindows();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_WindowManager_CleanDeadPool();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_GetRootWindow(IntPtr context, out IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_SetRootWindow(IntPtr context, IntPtr window);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_Draw(IntPtr context);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_SetDefaultFont(
        IntPtr context,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string fontName);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectMousePosition(IntPtr context, float x, float y, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectMouseMove(IntPtr context, float deltaX, float deltaY, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectMouseWheelChange(IntPtr context, float delta, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectMouseButtonDown(IntPtr context, MouseButton button, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectMouseButtonUp(IntPtr context, MouseButton button, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectKeyDown(IntPtr context, KeyScan scanCode, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectKeyUp(IntPtr context, KeyScan scanCode, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectChar(IntPtr context, uint codepoint, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectTimePulse(IntPtr context, float elapsedSeconds, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectCopyRequest(IntPtr context, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectCutRequest(IntPtr context, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_GUIContext_InjectPasteRequest(IntPtr context, out int handled);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetName(IntPtr window, out IntPtr name);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetType(IntPtr window, out IntPtr type);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetText(IntPtr window, out IntPtr text);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetText(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_SetProperty(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string property,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetProperty(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string property,
        out IntPtr value);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_IsPropertyPresent(
        IntPtr window,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string property,
        out int present);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_AddChild(IntPtr parent, IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_RemoveChild(IntPtr parent, IntPtr child);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern NativeResult CEGUI_C_Window_GetParent(IntPtr window, out IntPtr parent);
